--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /UNI02/Demo01/nbproject/private/
 /UNI02/Demo01/build/
 /UNI02/Demo02/target/
+/UNI02/JavaApplication12/nbproject/private/
+/UNI03/PROYECTO01/target/
