--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /UNI02/JavaApplication12/nbproject/private/
 /UNI03/PROYECTO01/target/
 /UNI04/AprendiendoJava/target/
+/UNI05/AprendiendoJava/target/
