--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /UNI04/AprendiendoJava/target/
 /UNI05/AprendiendoJava/target/
 /UNI06/AprendiendoBucles/target/
+/UNI07/AprendiendoArreglos/target/
+/Extra/PromedioApp/target/
